--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
   <body>
     <div class="wrapper">
       <div id="front" class="album">
+        <h4>PHARRELL WILLIAMS</h4>
         <div id="title-box">
+          
 
           <!-- Level 4 'PHARRELL WILLIAMS' Header -->
 
