automatically backed up by learn

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
   <body>
     <div class="wrapper">
       <div id="front" class="album">
-        <h4 #front>PHARRELL WILLIAMS</h4>
+        
         <div id="title-box">
-          
+        <h4 >PHARRELL WILLIAMS</h4>  
 
           <!-- Level 4 'PHARRELL WILLIAMS' Header -->
 
