--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
       <div id="front" class="album">
         
         <div id="title-box">
-        <h4 >PHARRELL WILLIAMS</h4>  
+        <h4>PHARRELL WILLIAMS</h4>  
+        <h2>HAPPY</h2>
 
           <!-- Level 4 'PHARRELL WILLIAMS' Header -->
 
