automatically backed up by learn

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div id="title-box">
         <h4>PHARRELL WILLIAMS</h4>  
         <h2>HAPPY</h2>
-        <h4>FROM DESPICABLE ME...</h4>
+        <h4>| FROM DESPICABLE ME...</h4>
 
           <!-- Level 4 'PHARRELL WILLIAMS' Header -->
 
@@ -24,6 +24,7 @@
       </div>
 
       <div id="back" class="album">
+        <h3>FROM DESPICABLE ME...></h3>
 
         <!-- Level 3 '| FROM DESPICABLE ME...' Header -->
 
