--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
 
       <div id="back" class="album">
         <h3>FROM DESPICABLE ME...></h3>
+        <h1>HAPPY</h1>
+        <h3>WRITTEN BY...</h3>
 
         <!-- Level 3 '| FROM DESPICABLE ME...' Header -->
 
