automatically backed up by learn

--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
         <h3>FROM DESPICABLE ME...></h3>
         <h1>HAPPY</h1>
         <h3>WRITTEN BY...</h3>
-        <p>PUBLISHED BY...<span> PHARRELLWILLIAMS.COM </span></p>
-        
+        <p>PUBLISHED BY...</p>
+        <span>PHARRELLWILLIAMS.COM </span>
 
         <!-- Level 3 '| FROM DESPICABLE ME...' Header -->
 
