automatically backed up by learn

--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
       <div id="back" class="album">
         <h3>FROM DESPICABLE ME...></h3>
         <h1>HAPPY</h1>
-        <h3>WRITTEN BY...</h3>
-        <span>PHARRELLWILLIAMS.COM </span>
+        <h3>WRITTEN BY <span>PHARRELL WILLIAMS</span></h3>
+        
         <p>PUBLISHED BY...</p>
         
 
