--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <div id="back" class="album">
         <h3>FROM DESPICABLE ME...></h3>
         <h1>HAPPY</h1>
-        <h3>WRITTEN BY <span>PHARRELL WILLIAMS</span></h3>
+        <h3>WRITTEN BY PHARRELL WILLIAMS</h3>
         
         <p>PUBLISHED BY...</p>
         
