automatically backed up by learn

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <h1>HAPPY</h1>
         <h3>WRITTEN BY PHARRELL WILLIAMS</h3>
         
-        <p>PUBLISHED BY...</p>
+        <p>PUBLISHED BY </p>
         
 
         <!-- Level 3 '| FROM DESPICABLE ME...' Header -->
