--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       </div>
 
       <div id="back" class="album">
-        <h3>FROM DESPICABLE ME...></h3>
+        <h3>| FROM DESPICABLE ME 2 |</h3>
         <h1>HAPPY</h1>
         <h3>WRITTEN BY PHARRELL WILLIAMS</h3>
         
