automatically backed up by learn

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <span>PHARRELLWILLIAMS.COM</span>
         <span>COLUMBIARECORDS.COM</span>
         <br>
-        <img src="../images/sony-logo.jpg" alt="sony logo">
+        <img src="images/sony-logo.jpg" alt="sony logo">
         
 
         <!-- Level 3 '| FROM DESPICABLE ME...' Header -->
